--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.daman.pizzazone">
+          xmlns:tools="http://schemas.android.com/tools" package="com.daman.pizzazone">
 
     <application
             android:allowBackup="true"
@@ -8,8 +8,10 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+            android:theme="@style/AppTheme"
+            tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".MainActivity"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -21,8 +23,11 @@
                 android:name="preloaded_fonts"
                 android:resource="@array/preloaded_fonts"/>
 
-        <activity android:name=".CustomiseActivity">
+        <activity android:name=".CustomiseActivity"
+                  android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".TrackDeliveryActivity"
+                  android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
